--- a/public/assets/css/nuestros.css
+++ b/public/assets/css/nuestros.css
@@ -47,3 +47,17 @@
         height: 280px;
     }
 }
+
+.gc_label_form{
+    text-align: left;
+}
+
+
+.n_nichos{
+    display: none;
+}
+
+.t_margin{
+    margin-left: 5px;
+    margin-right: 5px;
+}
