--- a/public/assets/css/nuestros.css
+++ b/public/assets/css/nuestros.css
@@ -70,3 +70,16 @@
 .back{
     margin-top: -100%;
 }
+
+.pborder {
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 5px 5px 5px 1px;
+}
+
+.ptitular{
+    border-radius: 25px;
+    background-color: rgba(0, 170, 154, 0.29);
+    margin-left: 3px;
+    margin-right: 3px;
+}
